--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,29 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*~
+.vscode
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+#
+testdata/data
+
+tmp
