--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClassName = 'net.data-ops.mail-detacher.App'
+    mainClassName = 'net.dataops.maildetacher.App'
 }
 
 jacoco {
