--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 hs_err_pid*
 
 # Ignore Gradle project-specific cache directory
-.gradle
+.gradle/
 
 # Ignore Gradle build output directory
 build
@@ -44,6 +44,5 @@ yarn-debug.log*
 yarn-error.log*
 
 #
-testdata/data
-
+testdata
 tmp
